# OpenGL_Engine

./: CMakeLists.txt  Instructions.txt
src/: camera.cpp  camera.h  cube.cpp  cube.h  directionallight.cpp  directionallight.h  engine.cpp  engine.h  logs.cpp  logs.h  main.cpp  materials.cpp  materials.h  mesh.cpp  mesh.h  model.cpp  model.h  pointlight.cpp  pointlight.h  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h  spotlight.cpp  spotlight.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h  utils.h
src/shaders/: cube_directionallight.frag  cube_directionallight.vert  cube_pointlight.frag  cube_spotlight.frag  pointlight.frag  pointlight.vert
